tdf#105294 - only add spacing for the border being set

related to tdf#41542 which now allows the space-to-contents value
even if the border is not visible.

For years, LO has been resetting the spacing to zero when a line
is disabled. Setting all border distances here was a mistake that
was never caught before, and the documents created because of
this oversight will likely cause some grief to bug 41542.

Reviewed-on: https://gerrit.libreoffice.org/33055
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Justin Luth <justin_luth@sil.org>
(cherry picked from commit 9e7526044c8fa6b006b0cb791d15f2476c96ebf2)
Reviewed-on: https://gerrit.libreoffice.org/33062

Conflicts:

	sw/source/core/edit/autofmt.cxx

Change-Id: Id2708cf20600e29e97dc6c8d8b779894ad9c38d1
Reviewed-on: https://gerrit.libreoffice.org/33063
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>