sw/source/core/edit/autofmt.cxx
@@ -584,7 +584,7 @@ bool SwAutoFormat::DoUnderline()
         aSet.Put( SwParaConnectBorderItem( false ) );
         SvxBoxItem aBox( RES_BOX );
         aBox.SetLine( &aLine, SvxBoxItemLine::BOTTOM );
-        aBox.SetDistance( 42 );     // ~0,75 mm
+        aBox.SetDistance(42, SvxBoxItemLine::BOTTOM );     // ~0,75 mm
         aSet.Put(aBox);
         m_pDoc->getIDocumentContentOperations().InsertItemSet( m_aDelPam, aSet );
 
